service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-service
spec:
  selector:
    app: ingress-kestrel
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
