ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "kestrel"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-aspnetcore-service
          servicePort: 8081
